--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
         <div class="btnstyle">Manisha </div>
         <button id="manisha" class="divbg">Click me</button>
         <script src='./index.js'></script>
+        <div class="btnstyle">Manisha </div>
+        <button id="manisha" class="divbg">ADD</button>
+        <script src='./index.js'></script>
+        <div class="btnstyle">Manisha </div>
+        <button id="manisha" class="divbg">Subtract</button>
+        <script src='./index.js'></script>
     </body>
 </html>
