--- a/index5.html
+++ b/index5.html
@@ -2,6 +2,7 @@
 <body>  
 <script type="text/javascript">  
 document.write("JavaScript is a simple language for javatpoint learners");  
+<script src='./index3.js'></script>
 </script>  
 </body>  
 </html>  
