--- a/index5.html
+++ b/index5.html
@@ -1,8 +1,17 @@
-<html>  
-<body>  
-<script type="text/javascript">  
-document.write("JavaScript is a simple language for javatpoint learners");  
-<script src='./index3.js'></script>
-</script>  
-</body>  
-</html>  
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>JavaScript Variables</h2>
+
+<p>Create a variable, assign a value to it, and display it:</p>
+
+<p id="demo"></p>
+
+<script>
+var carName = "Volvo";
+document.getElementById("demo").innerHTML = carName;
+</script>
+
+</body>
+</html>
