--- a/index.html
+++ b/index.html
@@ -15,5 +15,16 @@
         <div class="btnstyle3">Manisha </div>
         <button id="manisha" class="divbg">MULTIPLY</button>
         <script src='./index.js'></script>
+        <textarea>i think you van put stuff in here</textarea>
+        <table>
+            <tr>
+                <td>(0,0)</td>
+                <td>(1,0)</td>
+            </tr>
+            <tr>
+                <td>(0,1)</td>
+                <td>(1,1)</td>
+            </tr>
+        </table>
     </body>
 </html>
