--- a/object.html
+++ b/object.html
@@ -1,12 +1,13 @@
-const person = {
-    name: "Brian Holt",
-    city: "Seattle",
-    state: "WA",
-    favoriteFood: "🌮",
-    wantsTacosRightNow: true,
-    numberOfTacosWanted: 100
-  };
-  console.log(person);
-  console.log(person.name);
-  console.log(person["name"]); // same as the line above; definitely prefer using the other one
 
+!DOCTYPE html>
+<html lang='en'>
+    <head>
+        <meta charset='utf-8' />
+        <meta name='viewport' content='width=device-width, intial-scale=1.0' />
+        <link rel="stylesheet" href="./style.css" />
+    </head>
+    <body>
+        
+        <script src='./index.js'></script>
+        </body>>
+        </html>>
