--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="manisha" class="divbg">SUBTRACT</button>
         <div class="btnstyle3">Manisha </div>
         <button id="manisha" class="divbg">MULTIPLY</button>
-        <script src='./index.js'></script>
+        <script> <src='./index.js'></script>
         <textarea>i think you van put stuff in here</textarea>
         <table>
             <tr>
